standard concept filter change

--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -487,6 +487,10 @@ definitions:
         description: count value
         type: integer
         format: int64
+      participantCount:
+        description: participant count
+        type: integer
+        format: int64
 
   DbDomainListResponse:
     type: object
