--- a/api/db-cdr/vars.env
+++ b/api/db-cdr/vars.env
@@ -2,8 +2,8 @@ DB_CONNECTION_STRING=jdbc:mysql://db/cdr
 DB_DRIVER=com.mysql.jdbc.Driver
 DB_HOST=db
 DB_PORT=3306
-CDR_DB_NAME=cdr20180702
-PUBLIC_DB_NAME=public20180702
+CDR_DB_NAME=cdr
+PUBLIC_DB_NAME=public
 LIQUIBASE_DB_USER=liquibase
 LIQUIBASE_DB_PASSWORD=lb-notasecret
 MYSQL_ROOT_PASSWORD=root-notasecret
