--- a/api/src/main/resources/client_api.yaml
+++ b/api/src/main/resources/client_api.yaml
@@ -427,6 +427,10 @@ definitions:
         type: integer
         format: int32
         description: The maximum number of results returned. Defaults to 20.
+      minCount:
+        type: integer
+        format: int32
+        description: Determines the concepts to be fetched. Gets all the concepts if 0 or gets concepts with counts if 1.
 
   ConceptListResponse:
     type: object
