--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -573,3 +573,7 @@ definitions:
         type: integer
         format: int32
         description: The maximum number of results returned. Defaults to 25.
+      minCount:
+        type: integer
+        format: int32
+        description: The minimum count of concepts to be fetched
