--- a/public-ui/package.json
+++ b/public-ui/package.json
@@ -19,7 +19,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-redux/store": "^6.6.0",
     "@angular/animations": "^5.2.2",
     "@angular/common": "^5.2.2",
     "@angular/compiler": "^5.2.2",
@@ -32,31 +31,22 @@
     "@clr/angular": "^0.11.12",
     "@clr/icons": "^0.11.12",
     "@clr/ui": "^0.11.12",
-    "@swimlane/ngx-charts": "^7.1.1",
-    "@types/geojson": "^1.0.6",
     "@webcomponents/custom-elements": "^1.0.0",
     "angular-2-local-storage": "^1.0.1",
     "angular2-highcharts": "^0.5.5",
     "bootstrap": "4.0.0",
     "core-js": "^2.5.3",
-    "d3": "^4.12.2",
-    "dom-to-image": "^2.6.0",
     "enhanced-resolve": "3.3.0",
     "highcharts": "^6.0.4",
     "immutable": "^4.0.0-rc.9",
     "moment": "^2.20.1",
     "mutationobserver-shim": "^0.3.2",
-    "ng2-nouislider": "^1.7.7",
-    "ngx-popper": "^1.9.9",
     "ngx-responsive": "^6.0.0",
     "nouislider": "10.0.0",
     "popper.js": "^1.13.0",
-    "redux": "^3.7.2",
-    "redux-observable": "^0.16.0",
     "rxjs": "^5.5.6",
     "stackdriver-errors-js": "^0.4.0",
-    "stacktrace-js": "^2.0.0",
-    "zone.js": "0.8.12"
+    "stacktrace-js": "^2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/core": "0.4.7",
