--- a/public-ui/package.json
+++ b/public-ui/package.json
@@ -46,7 +46,8 @@
     "popper.js": "^1.13.0",
     "rxjs": "^5.5.6",
     "stackdriver-errors-js": "^0.4.0",
-    "stacktrace-js": "^2.0.0"
+    "stacktrace-js": "^2.0.0",
+    "zone.js": "0.8.12"
   },
   "devDependencies": {
     "@angular-devkit/core": "0.4.7",
