map for domain count

--- a/api/db-cdr/vars.env
+++ b/api/db-cdr/vars.env
@@ -9,5 +9,5 @@ LIQUIBASE_DB_PASSWORD=lb-notasecret
 MYSQL_ROOT_PASSWORD=root-notasecret
 CDR_DB_USER=cdr
 CDR_DB_PASSWORD=cdr-notasecret
-PUBLIC_DB_USER=public
+PUBLIC_DB_USER=publiccd
 PUBLIC_DB_PASSWORD=public-notasecret
