--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -121,7 +121,7 @@ paths:
           schema:
             $ref: "#/definitions/BugReport"
         500:
-          description: Cannot connect to JIRA. Please try again later
+          description: JIRA Internal Error
 
   # TODO(dmohs): If the username is not present in the query string, this responds with 500 Server
   # Error. It should respond with 400 Bad Request.
