--- a/api/build.gradle
+++ b/api/build.gradle
@@ -82,6 +82,30 @@ task generateNotebooksClient {
   }
 }
 
+def jiraApiFile = 'src/main/resources/jira.yaml'
+
+task generateJiraClient {
+  inputs.file("$projectDir/$jiraApiFile")
+  outputs.dir("$projectDir/$swaggerTargetFolder")
+  doLast {
+    def config = new CodegenConfigurator()
+    config.setInputSpec("file:///$projectDir/$jiraApiFile")
+    config.setOutputDir("$projectDir")
+    config.setTemplateDir("$projectDir/$swaggerTemplateDir")
+    config.setLang('java')
+    config.setAdditionalProperties([
+            'invokerPackage'   : 'org.pmiops.workbench.jira',
+            'modelPackage'     : 'org.pmiops.workbench.jira.model',
+            'apiPackage'       : 'org.pmiops.workbench.jira.api',
+            'sourceFolder'     : swaggerTargetFolder,
+            'library'          : 'okhttp-gson',
+            'serializableModel': 'true',
+            'dateLibrary'      : 'java8'
+    ])
+    new DefaultGenerator().opts(config.toClientOptInput()).generate()
+  }
+}
+
 def mandrillApiFile = 'src/main/resources/mandrill_api.yaml'
 
 task generateMandrillClient {
@@ -191,6 +215,8 @@ ideaModule.dependsOn generateFireCloudClient
 compileGeneratedJava.dependsOn generateFireCloudClient
 ideaModule.dependsOn generateNotebooksClient
 compileGeneratedJava.dependsOn generateNotebooksClient
+ideaModule.dependsOn generateJiraClient
+compileGeneratedJava.dependsOn generateJiraClient
 ideaModule.dependsOn generateMandrillClient
 compileGeneratedJava.dependsOn generateMandrillClient
 classes.dependsOn generatedClasses
@@ -296,6 +322,9 @@ swaggerSources {
   }
   notebooks {
     inputFile = file("$projectDir/$notebooksApiFile")
+  }
+  jira {
+    inputFile = file("$projectDir/$jiraApiFile")
   }
 }
 
