Domain Participant Count [risk=no] (#969)
* ppi fix and domain participant count addition

* ppi fix and domain participant count addition

* ppi fix and domain participant count addition

* ppi fix and domain participant count addition

* test fix

* standard concept filter change

* tests

* Removed a function that is not being used

* map for domain count

* tests, different api for concept search with empty query, new concept and achilles_results csvs

* non standard test

* test

* pulled in criteria file

* search concepts function change

* Codacy fix

* change in vars.env

* removed new api

* changed tests

* tests

* Tests in api

--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -487,6 +487,10 @@ definitions:
         description: count value
         type: integer
         format: int64
+      participantCount:
+        description: participant count
+        type: integer
+        format: int64
 
   DbDomainListResponse:
     type: object
@@ -569,3 +573,7 @@ definitions:
         type: integer
         format: int32
         description: The maximum number of results returned. Defaults to 25.
+      minCount:
+        type: integer
+        format: int32
+        description: The minimum count of concepts to be fetched
