--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -32,9 +32,7 @@
     "projectId": "all-of-us-workbench-test"
   },
   "admin": {
-    "adminIdVerification": "manual-id-verification-requests@fake-research-aou.org",
-    "supportGroup": "all-of-us-workbench-eng@googlegroups.com",
-    "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com"
+    "adminIdVerification": "manual-id-verification-requests@fake-research-aou.org"
   },
   "jira": {
     "projectKey": "RW"
