--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -31,9 +31,7 @@
     "projectId": "all-of-us-rw-staging"
   },
   "admin": {
-    "adminIdVerification": "manual-id-verification-requests@fake-research-aou.org",
-    "supportGroup": "all-of-us-workbench-eng@googlegroups.com",
-    "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com"
+    "adminIdVerification": "manual-id-verification-requests@fake-research-aou.org"
   },
   "jira": {
     "projectKey": "RW"
