--- a/api/tools/build.gradle
+++ b/api/tools/build.gradle
@@ -130,6 +130,7 @@ dependencies {
   compile 'org.hibernate:hibernate-validator:+'
   compile 'com.squareup.okhttp:okhttp:2.6.0'
   compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
+  compile 'mysql:mysql-connector-java:+'
 }
 
 
