--- a/api/tools/build.gradle
+++ b/api/tools/build.gradle
@@ -124,12 +124,13 @@ dependencies {
   compile 'joda-time:joda-time:+'
   compile 'com.github.fge:json-patch:+'
   compile 'io.swagger:swagger-annotations:1.5.9'
-  compile 'com.google.cloud.sql:mysql-socket-factory:1.0.0'
+  compile 'com.google.cloud.sql:mysql-socket-factory:1.0.10'
   compile 'org.apache.commons:commons-lang3:3.0'
   compile 'com.google.code.gson:gson:+'
   compile 'org.hibernate:hibernate-validator:+'
   compile 'com.squareup.okhttp:okhttp:2.6.0'
   compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
+  compile 'mysql:mysql-connector-java:+'
 }
 
 
