--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -31,7 +31,9 @@
     "projectId": "all-of-us-rw-stable"
   },
   "admin": {
-    "adminIdVerification": "manual-id-verification-requests@fake-research-aou.org"
+    "adminIdVerification": "manual-id-verification-requests@fake-research-aou.org",
+    "supportGroup": "all-of-us-workbench-eng@googlegroups.com",
+    "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com"
   },
   "jira": {
     "projectKey": "RW"
