--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -35,7 +35,7 @@
     "adminIdVerification": "stable-environment-manual-id-verification-requests@fake-research-aou.org",
     "supportGroup": "all-of-us-workbench-eng@googlegroups.com",
     "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com",
-    "loginPage": "http:\/\/localhost:4200/login"
+    "loginUrl": "http:\/\/localhost:4200/login"
   },
   "mandrill": {
     "fromEmail": "donotreply@fake-research-aou.org",
