--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -34,7 +34,7 @@
     "adminIdVerification": "stable-environment-manual-id-verification-requests@fake-research-aou.org",
     "supportGroup": "all-of-us-workbench-eng@googlegroups.com",
     "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com",
-    "loginPage": "http:\/\/all-of-us-workbench-stable.appspot.com/login"
+    "loginUrl": "http:\/\/all-of-us-workbench-stable.appspot.com/login"
   },
   "mandrill": {
     "fromEmail": "donotreply@fake-research-aou.org",
