--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -72,6 +72,25 @@ paths:
           schema:
             $ref: "#/definitions/ConceptAnalysisListResponse"
 
+  /v1/databrowser/measurement-analysis-results:
+    get:
+      security: []
+      tags:
+        - dataBrowser
+      description: Gets analysis results for measurement
+      operationId: "getMeasurementAnalysisResults"
+      parameters:
+        - in : query
+          name: concept-id
+          type: string
+          required: true
+          description: concept id
+      responses:
+        200:
+          description: A collection of analysis for measurement
+          schema:
+            $ref: "#/definitions/MeasurementAnalysisListResponse"
+
   /v1/databrowser/participant-count:
     get:
       security: []
@@ -528,6 +547,30 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/ConceptAnalysis"
+
+  MeasurementAnalysis:
+    type: object
+    required:
+      - conceptId
+    properties:
+      conceptId:
+        description: concept id
+        type: string
+      analysis:
+        description: measurement analysis
+        type: object
+        $ref: "#/definitions/Analysis"
+
+  MeasurementAnalysisListResponse:
+    type: object
+    required:
+      - items
+    properties:
+      items:
+        type: array
+        items:
+          $ref: "#/definitions/MeasurementAnalysis"
+
 
   StandardConceptFilter:
     type: string
