--- a/api/src/main/resources/cb_search_api.yaml
+++ b/api/src/main/resources/cb_search_api.yaml
@@ -91,7 +91,7 @@ paths:
     get:
       tags:
         - cohortBuilder
-      description: Returns builder criteria tree with the specified criteria type and parentId
+      description: Returns builder criteria tree with the specified criteria type and subtype
       operationId: "getCriteriaByTypeAndSubtype"
       parameters:
         - in: path
@@ -104,6 +104,47 @@ paths:
           type: string
           required: true
           description: the specific subtype of criteria to get
+      responses:
+        200:
+          description: A collection of criteria
+          schema:
+            $ref: "#/definitions/CriteriaListResponse"
+
+  /v1/cohortbuilder/{cdrVersionId}/criteria/{name}:
+    parameters:
+      - $ref: '#/parameters/cdrVersionId'
+    get:
+      tags:
+        - cohortBuilder
+      description: Returns criteria tree with the specified name
+      operationId: "getDrugBrandOrIngrediantByName"
+      parameters:
+        - in: path
+          name: name
+          type: string
+          required: true
+          description: name of ingredient or brand
+      responses:
+        200:
+          description: A collection of criteria
+          schema:
+            $ref: "#/definitions/CriteriaListResponse"
+
+  /v1/cohortbuilder/{cdrVersionId}/criteria/{conceptId}:
+    parameters:
+      - $ref: '#/parameters/cdrVersionId'
+    get:
+      tags:
+        - cohortBuilder
+      description: Returns criteria tree with the specified name
+      operationId: "getDrugIngredientsByConceptId"
+      parameters:
+        - in: path
+          name: conceptId
+          type: integer
+          format: int64
+          required: true
+          description: conceptId of brand
       responses:
         200:
           description: A collection of criteria
