RW-982 fix to ambiguous paths.

--- a/api/src/main/resources/cb_search_api.yaml
+++ b/api/src/main/resources/cb_search_api.yaml
@@ -110,7 +110,7 @@ paths:
           schema:
             $ref: "#/definitions/CriteriaListResponse"
 
-  /v1/cohortbuilder/{cdrVersionId}/criteria/{name}:
+  /v1/cohortbuilder/{cdrVersionId}/criteria/drugName/{name}:
     parameters:
       - $ref: '#/parameters/cdrVersionId'
     get:
@@ -130,7 +130,7 @@ paths:
           schema:
             $ref: "#/definitions/CriteriaListResponse"
 
-  /v1/cohortbuilder/{cdrVersionId}/criteria/{conceptId}:
+  /v1/cohortbuilder/{cdrVersionId}/criteria/conceptid/{conceptId}:
     parameters:
       - $ref: '#/parameters/cdrVersionId'
     get:
